Final commit. Added styling.

--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,23 +1,47 @@
 .card {
-    position: relative;
-    z-index: 3;
-    border: 1px solid red;
-    max-height: 300px;
+    height: 280px;
+    width: 23%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    align-items: center;
     overflow: hidden;
+    background-color: #fbcbc9;
+    border-radius: 5%;
+    box-shadow: 0 0 10px #0d1137;
+}
+
+.card:hover{
+    animation: shadow-change 200ms linear forwards;
+    animation: background-change 200ms linear forwards;
 }
 
 img {
-    z-index: 2;
-    position: relative;
     max-width: 220px;
     max-height: 250px;
 }
 
 .card p {
-    z-index: 2;
-    position: relative;
+    color: #0d1137;
+    font-size: 1.5em;
+    font-weight: 700;
     margin: 0;
+}
+
+@keyframes shadow-change {
+    from {
+        box-shadow: 0 0 10px #0d1137;
+    }
+    to {
+        box-shadow: 0 0px 15px #ecc19c;
+    }  
+}
+
+@keyframes background-change {
+    from {     
+    }
+    to {
+        transform: scale(1.02, 1.02);
+        background-color: #e8d21d;
+    }
 }
