--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,49 @@
 .App {
   text-align: center;
+  width: 100%;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 100%;
+  width: 50px;
+  margin-left: 25px;
+  text-align: center;
+  border-radius: 50%;
   pointer-events: none;
+  background-image: url('../src/images/logo-small.png');
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  z-index: 20;
+  width: 20vh;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  background-color: #0d1137;
+  color: wheat;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  gap: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.App-name {
+  font-size: 3.5em;
+  font-weight: bold;
+}
+
+.App-name + p, .score p {
+  margin: 2px;
+}
+
+.score {
+  margin-right: 20px;
+  font-weight: bold;
+  font-size: 1.3em;
 }
 
 @keyframes App-logo-spin {
